--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Anton&family=Anton+SC&display=swap"
+        rel="stylesheet">
+    <title>CARROS XDD</title>
 </head>
 
 <body>
@@ -20,9 +22,16 @@
             <li id="links"><a a href="html/produtos.html" id="linksEs">Fale Conosco</a></li>
         </ul>
     </nav>
-    <p>
-        Meme XDDDD neeetz
-    </p>
+
+    <img src="img/carro1.png" class="imagem">
+
+
+    <h1 id="carro">Lamborghini</h1>
+    <h2 id="texto">Os carros da Lamborghini são esportivos de luxo com motores potentes, design agressivo e
+        aerodinâmico, tecnologia avançada e interiores sofisticados, feitos para oferecer velocidade, exclusividade
+        e
+        uma experiência de condução única.</h2>
+
 </body>
 
 </html>
