--- a/html/faleConosco.html
+++ b/html/faleConosco.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Fale Conosco</title>
+    <link rel="stylesheet" href="../css/faleConosco.css" />
   </head>
-  <body></body>
   <body>
-    <h1>teste</h1>
-    <h2>aaaa</h2>
-    <h3>bbb</h3>
+        </div>
+        <div class="fale-container">
+        <h2>Fale Conosco</h2>
+        <form>
+            <div class="input-group">
+            <label for="E-mail">Email</label>
+            <input type="text" placeholder="E-mail" required />
+            </div>
+
+            <div class="input-group">
+            <label for="comentario">Comentário</label>
+            <textarea id="comentario" placeholder="Deixe o seu comentário"></textarea>
+            </div>
+            <button type="submit" class="btn-enviar">Enviar</button>
+        </form>
+        </div>
   </body>
 </html>
