--- a/html/faleConosco.html
+++ b/html/faleConosco.html
@@ -3,25 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fale Conosco</title>
     <link rel="stylesheet" href="../css/faleConosco.css" />
+    <title>Fale Conosoco</title>
   </head>
   <body>
-        </div>
-        <div class="fale-container">
-        <h2>Fale Conosco</h2>
-        <form>
-            <div class="input-group">
-            <label for="E-mail">Email</label>
-            <input type="text" placeholder="E-mail" required />
-            </div>
-
-            <div class="input-group">
-            <label for="comentario">Comentário</label>
-            <textarea id="comentario" placeholder="Deixe o seu comentário"></textarea>
-            </div>
-            <button type="submit" class="btn-enviar">Enviar</button>
-        </form>
-        </div>
+    <div class="topo">
+      <nav class="navbar">
+        <div class="logo">CARROS XDD</div>
+        <ul class="link">
+          <li id="links"><a a href="index.html" id="linksEs">Home</a></li>
+          <li id="links">
+            <a a href="html/produtos.html" id="linksEs">Produtos</a>
+          </li>
+          <li id="links">
+            <a a href="../html/faleConosco.html" id="linksEs">Fale Conosco</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="form">
+      <form action="">
+        <h1>Fale Conosco</h1>
+        <label for="nome">Nome</label>
+        <input type="text" name="nome" placeholder="Nome" required />
+        <label for="email">Email</label>
+        <input type="email" name="email" placeholder="Email" required />
+        <label for="texto">Deixe o Seu Comentário</label>
+        <textarea id="texto" placeholder="Deixe o seu comentário"></textarea>
+        <button type="submit" name="btn-enviar">Enviar</button>
+      </form>
+    </div>
+    <div class="contato">
+      <a href="https://www.facebook.com" target="_blank">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
+          alt="Facebook"
+          width="40"
+        />
+      </a>
+      <a href="https://www.twitter.com" target="_blank">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/733/733579.png"
+          alt="X (Twitter)"
+          width="40"
+        />
+      </a>
+      <a href="https://www.instagram.com" target="_blank">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
+          alt="Instagram"
+          width="40"
+        />
+      </a>
+    </div>
   </body>
 </html>
