--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="navbar">
             <li id="links"><a a href="index.html" id="linksEs">Home</a></li>
             <li id="links"><a a href="html/produtos.html" id="linksEs">Produtos</a></li>
-            <li id="links"><a a href="html/produtos.html" id="linksEs">Fale Conosco</a></li>
+            <li id="links"><a a href="html/faleConosco.html" id="linksEs">Fale Conosco</a></li>
         </ul>
     </nav>
 
